# Utopia

./: .gitignore  .render-build.sh  Dockerfile  README.md  render.yaml
benchmarks/: http-backend.php  tcpbench.c
benchmarks/harness/: README.md  deploy.sh  lib.sh  remote.sh  report.py  run.sh
benchmarks/harness/scenarios/: http_rps.sh  ram_per_connection.sh  ram_per_connection.sh.bak  tcp_conn_rate.sh
benchmarks/harness/targets/: php_http.env  php_tcp.env  rust_http.env  rust_tcp.env
benchmarks/httpbench/: Makefile  httpbench.c
public/: index.php
rust/: Cargo.toml  Dockerfile  README.md
rust/bins/proxy/: Cargo.toml
rust/bins/proxy/src/: main.rs
rust/crates/utopia-proxy/: Cargo.toml  build.rs
rust/crates/utopia-proxy/examples/: http.rs  http_proxy.rs  smtp.rs  tcp.rs
rust/crates/utopia-proxy/src/: connection_result.rs  dns.rs  error.rs  lib.rs  protocol.rs
rust/crates/utopia-proxy/src/adapter/: mod.rs  tcp.rs
rust/crates/utopia-proxy/src/resolver/: fixed.rs  mod.rs
rust/crates/utopia-proxy/src/server/: mod.rs
rust/crates/utopia-proxy/src/server/http/: config.rs  handler.rs  mod.rs  pool.rs  server.rs
rust/crates/utopia-proxy/src/server/smtp/: config.rs  connection.rs  mod.rs  server.rs
rust/crates/utopia-proxy/src/server/tcp/: config.rs  connection.rs  mod.rs  server.rs  sockopts.rs
rust/crates/utopia-proxy/src/sockmap/: linux.rs  mod.rs  tuple.rs
rust/crates/utopia-proxy/src/tls/: context.rs  mod.rs
rust/crates/utopia-proxy/tests/: adapter_actions.rs  adapter_factory.rs  adapter_metadata.rs  config.rs  connection_result.rs  dns.rs  edge_resolver.rs  endpoint_validation.rs  fixed_resolver.rs  integration_http.rs  integration_smtp.rs  integration_tcp.rs  on_resolve_callback.rs  parse_endpoint.rs  protocol.rs  resolver.rs  routing_cache.rs  smoke.rs  sockmap_key.rs  tcp_adapter.rs  tls_context.rs
rust/crates/utopia-proxy/tests/common/: mock_resolver.rs  mod.rs
rust/crates/utopia-proxy/tests/fixtures/: sockmap_keys.json
src/Server/HTTP/: Swoole.php
src/Server/HTTP/Swoole/: Coroutine.php
src/Server/TCP/: Connection.php  Swoole.php  TLS.php
src/Server/TCP/Swoole/: Coroutine.php
tests/: HTTPServerConfigTest.php  SockmapKeyTest.php  TLSTest.php
