[package]
name = "proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "utopia-proxy CLI entrypoint"

[[bin]]
name = "proxy"
path = "src/main.rs"

[dependencies]
utopia-proxy = { path = "../../crates/utopia-proxy" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
